# Labs

Laba 1/: 1_1.c  1_10.c  1_2.c  1_3.c  1_4.c  1_5.c  1_6.c  1_7.c  1_8.c  1_9.c
Laba 2/: 2_10.c  2_2.c  2_3.c  2_4.c  2_5.c  2_6.c  2_7.c  2_8.c  2_9.c
Laba 2/Task 1/: main.c
Laba 2/Task 8/: main.c
Laba 3/: 3_1.c  3_2.c  3_3.c  3_4.c  3_5.c  3_7.c  new3_5.c
Laba 3/3_6/: 6_1.c  6_2.c  t6.c  t62.c
Laba4/: 4_4.c  4_5.c  4_7.c  in2.txt  mistakes.txt  result.txt  test1.txt
Laba5/Project1/: Project1.sln
Laba5/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  main.cpp  red_black_tree.h
Laba5/Task0/: 5_0.cpp
Laba5/Task1/: 5_1.cpp
Laba5/Task11/: CMakeLists.txt  associative_container.h  binary_search_tree.h  file1.txt  file2.txt  main.cpp
Laba5/Task2/: CMakeLists.txt  allocator.cpp  allocator.h  file2.txt  file3.txt  main.cpp  memory_denis.h
Laba5/Task3/: CMakeLists.txt  allocator2.cpp  allocator2.h  file1.txt  file2.txt  list_memory.cpp  list_memory.h  main.cpp  memory.h
Laba5/Task4/: CMakeLists.txt  border_descriptors_memory.cpp  border_descriptors_memory.h  boundary_tags_allocator.cpp  boundary_tags_allocator.h  file1.txt  file2.txt  main.cpp  memory.h
Laba5/Task5/: CMakeLists.txt  file2.txt  main.cpp  memory.h  memory_buddy_system.cpp  memory_buddy_system.h
Laba5/course_work/: CMakeLists.txt  abstract_handler.h  allocator_type.h  collection.h  comparers.h  cp  database_singleton.h  file_reader.h  logger_singleton.h  logs.txt  main.cpp  parse.h  pool.h  request_handler_with_command.h  request_handler_with_command_chain.h  scheme.h  student_definition.h  test1.txt  tree_type.h
Laba5/course_work/allocators/: boundary_tags_allocator.cpp  boundary_tags_allocator.h  list_memory.cpp  list_memory.h  memory_buddy_system.cpp  memory_buddy_system.h
Laba5/course_work/commands/: command.h  command_add_collection.h  command_add_data.h  command_add_pool.h  command_add_scheme.h  command_get_data.h  command_get_data_between.h  command_remove_collection.h  command_remove_data.h  command_remove_pool.h  command_remove_scheme.h  command_update_data.h
Laba5/course_work/exception/: doesnt_exist.h
Laba5/course_work/logger/: logger.cpp  logger.h  logger_builder.cpp  logger_builder.h  logger_builder_concrete.cpp  logger_concrete.cpp  logger_holder.h
Laba5/course_work/memory/: memory.cpp  memory.h  memory_holder.cpp
Laba5/course_work/not_implemented/: not_implemented.h
Laba5/course_work/tree/: associative_container.h  binary_search_tree.h  red_black_tree.h
Laba5/cr/: abstract_container.h  associative_container.h
Laba5/log2/: CMakeLists.txt  bbb.txt  file1.txt  file2.txt  file4.txt  logger.cpp  logger.h  logger_builder.cpp  logger_builder.h  logger_builder_concrete.h  logger_concrete.cpp  logger_concrete.h  main  main.cpp
Laba5/logger/log2/: CMakeCache.txt  CMakeLists.txt  Makefile  ab2.txt  bbb.txt  cmake_install.cmake  file1.txt  file2.txt  file3.txt  file4.txt  logger_builder_concrete.cpp  logger_builder_concrete.h  logger_concrete.cpp  logger_concrete.h  logger_holder.cpp  main  main.cpp  pars.json  t1
Laba5/logger/log2/CMakeFiles.txt/: CMakeCache.txt
Laba5/memory/: memory_holder.h
Laba5/task12/: avl_tree.h
Laba5/task13/: CMakeLists.txt  file1.txt  main.cpp  red_black_tree.h
Laba5/task14/: main.cpp  splay_tree.h
Laba5/task6/: bigint.cpp  bigint.h  long_number.cpp  long_number.h  main.cpp  string_number.cpp  string_number.h
